--- a/SambalpurAndroidApp/app/src/main/res/values/strings.xml
+++ b/SambalpurAndroidApp/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Sambalpur</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+
+    <string name="update_msg_1">A new version is available.</string>
+    <string name="update_msg_2">Please Update to continue using the app</string>
+
+    <!--application Action bar text-->
+    <string name="update_activity">Update</string>
 </resources>
